[workspace]
resolver = "2"
members = [
    "err",

    "ds",
    "ds/std",

    "fs",
    "fs/cdfs",
    "fs/exfat",
    "fs/fat",
    "fs/ntfs",
]

[workspace.dependencies]
log = "0.4"

hyrax_err = { path = "err" }
hyrax_ds = { path = "ds" }
hyrax_fs = { path = "fs" }

zerocopy = { version = "0.8", features = ["derive"] }
