[package]
name = "hyrax_fs_cdfs"
version = "0.1.0"
authors = ["Kevin Ludwig <iam@valaphee.com>"]
edition = "2021"
description = "CD-ROM file system for the Hyrax operating system."
license = "Apache-2.0"

[dependencies]
log = { workspace = true }
hyrax_ds = { workspace = true }
hyrax_fs = { workspace = true }
zerocopy = { workspace = true }
